; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192e/extr_r8192E_core.c_rtl8192_irq_rx_tasklet.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192e/extr_r8192E_core.c_rtl8192_irq_rx_tasklet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.r8192_priv = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@INTA_MASK = common dso_local global i32 0, align 4
@IMR_RDU = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rtl8192_irq_rx_tasklet(%struct.r8192_priv* %0) #0 {
  %2 = alloca %struct.r8192_priv*, align 8
  store %struct.r8192_priv* %0, %struct.r8192_priv** %2, align 8
  %3 = load %struct.r8192_priv*, %struct.r8192_priv** %2, align 8
  %4 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %3, i32 0, i32 0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @rtl8192_rx(i32 %7)
  %9 = load %struct.r8192_priv*, %struct.r8192_priv** %2, align 8
  %10 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @INTA_MASK, align 4
  %15 = load %struct.r8192_priv*, %struct.r8192_priv** %2, align 8
  %16 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @INTA_MASK, align 4
  %21 = call i32 @read_nic_dword(i32 %19, i32 %20)
  %22 = load i32, i32* @IMR_RDU, align 4
  %23 = or i32 %21, %22
  %24 = call i32 @write_nic_dword(i32 %13, i32 %14, i32 %23)
  ret void
}

declare dso_local i32 @rtl8192_rx(i32) #1

declare dso_local i32 @write_nic_dword(i32, i32, i32) #1

declare dso_local i32 @read_nic_dword(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
